<resources>
    <string name="app_name">Rammel_Score</string>
    <!-- Additional string resources -->
    <string name="logo_ph_contentdescription">This is a logo of Philippines basketball team</string>
    <string name="logo_canada_content_description">This is a logo of Canada basketball team</string>
    <string name="toggle_text_canada">Team CA</string>
    <string name="toggle_text_ph">Team PH</string>
    <string name="text_vs">vs</string>
    <string name="text_ph">Philippines</string>
    <string name="text_canada">Canada</string>
    <string name="default_score">0</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="text_1_pt">1 pt</string>
    <string name="text_2_pt">2 pts</string>
    <string name="text_3_pt">3 pts</string>
    <string name="reset_score">Reset Score</string>
    <string name="negative_score">A negative score is not allowed.</string>
</resources>